--- a/other/qualityAssuranceV2/css/media.css
+++ b/other/qualityAssuranceV2/css/media.css
@@ -1,76 +1,12 @@
-
-@media only screen and (max-width: 640px){
+@media screen only and (max-width: 940px) and (orientation:landscape){
 	/* Navigation & Home page */
-	.nav {
-		height: 40px;
-		line-height: 40px;
-		width:100%;
-		font-size: .9em;
-	}
-
-	.nav ul {padding-left: 3%;}
-	.nav li {width: 50px; line-height: 20px;}
-	/*
-	.nav li { border-right: 1px solid #fff; }
-	.nav li { padding-right : 3px; }
-	.nav li:last {border-right:none;}
-	*/
-	.nav a {}
-	.nav a:hover {}
-	.nav a.active {}
-
-	.domoFont {font-size: 1.2em; letter-spacing: -2;}
-
-	#headerBase {position: absolute; top: 0; height: 40px;}
-
-	#header1 {}
-	#header2 {}
-
-	.header1 {height: 40px; line-height: 40px; z-index: 100;}
-	.header1:hover {}
-	.header2 {top: 3px; height: 40px; line-height: 40px;}
-
-	.header3Version {
-		position: absolute;
-		font-size: .3em;
-		width: 100%;
-		text-align: right;
-	}
-
-	.tHover {}
-	.tHover:hover .header3Version {}
-
-	/* General Items */
-	.titleFade {font-size: 1em;}
-	content {top: 40px;	height: calc(100% - 42px);}
-	.rCount {display: none;}
-	.message {font-size: .7em;line-height: 2em;}
+	.vertX{line-height: 1.2em; font-size: .7em !important;}
+	.hscLocation2 {font-size: .8em; width: 45% !important;}
+	.displayNextTitle2 {height: 1em; line-height: 1em;}
+	.displayNextSquad2 {height: 1.5em !important; line-height: 1.5em !important;}
+	.hscList2 {top: 3em !important; height: calc(100% - 3em) !important;}
 	/* Navigation & Home page end */
 
-	/* Team */
-	.teamsList {} #teamLayout {font-size: .75em;}
-	/* Team end */
-
-	/* Server */
-	.wname {width: 34vw;}
-	.wsname {width: 50vw; left: 35vw;}
-	.wnotes {width: 44vw; left: 35vw;display: none;}
-	.wtype {width: 20vw; left: 80vw; text-align: center;}
-	#serverBody{font-size: .9em;}
-	/* Server end */
-
-	/* hotfix */
-	.hotfixMain {font-size: .75em;}
-	/* Hotfix end */
-
-	#linksBody {font-size: .8em;}
-
-}
-
-@media only screen and (max-width: 750px) and (orientation : landscape){
-	/* Navigation & Home page */
-	.vertX{line-height: 1.25em; font-size: .7em !important;}
-	/* Navigation & Home page end */
 	#teamLayout {font-size: .75em;}
 	.dropdown-content {font-size: .725em;}
 	.featuresList{width: 55%; min-width: 55%; min-height: 5%;}
@@ -83,9 +19,10 @@
 	#serverBody{font-size: .9em;}
 	/* Server end */
 
-	/* hotfix */
+	/* Hotfix */
 	.hotfixMain {font-size: .75em;}
 	/* Hotfix end */
+	/* Links */
 	#linksBody {font-size: .75em;}
 	.lname {
 		width: 28%;
@@ -104,31 +41,194 @@
 		width: 10%;
 		text-align: left;
 	}
-
+	/* Links end */
 }
 
-@media only screen and (max-width: 500px){
-	/*	widths	Team Page */
-		.teamsList {width: 33% !important;}
-		.qaList{width: 33% !important;}
-		.directorList{width: 33% !important;}
-		.featuresList{display: none;}
-		.ffeaturesList{display: none;}
+@media screen and (max-width: 736px) and (orientation:landscape){ 
+	/* Navigation & Home page */
+	.nav {height: 40px; line-height: 40px; width:100%; font-size: .9em;}
+	.nav ul {padding-left: 3%;}
+	.nav li {width: 50px; line-height: 20px;}
+	.nav a {}
+	.nav a:hover {}
+	.nav a.active {}
+	.domoFont {font-size: 1.2em; letter-spacing: -2;}
+	#headerBase {position: absolute; top: 0; height: 40px;}
+	#header1 {}
+	#header2 {}
+	.header1 {height: 40px; line-height: 40px; z-index: 100;}
+	.header1:hover {}
+	.header2 {top: 3px; height: 40px; line-height: 40px;}
+	.header3Version {
+		position: absolute;
+		font-size: .3em;
+		width: 100%;
+		text-align: right;
+	}
 
-			/* Server */
+	.tHover {}
+	.tHover:hover .header3Version {}
+	/* General Items */
+	.titleFade {font-size: 1em;}
+	content {top: 40px;	height: calc(100% - 42px);}
+	.rCount {display: none;}
+	.message {font-size: .7em;line-height: 2em;}
+
+
+	.vertX{line-height: 1.2em; font-size: .7em !important;}
+	.hscLocation2 {font-size: .8em; width: 45% !important;}
+	.displayNextTitle2 {height: 1em; line-height: 1em;}
+	.displayNextSquad2 {height: 1.5em !important; line-height: 1.5em !important;}
+	.hscList2 {top: 3em !important; height: calc(100% - 3em) !important;}
+	/* Navigation & Home page end */
+
+	/* Team Items */
+	#teamLayout {font-size: .75em;}
+	.dropdown-content {font-size: .725em;}
+	.featuresList{width: 55%; min-width: 55%; min-height: 5%;}
+
+	/* Server */
 	.wname {width: 34vw;}
-	.wsname {width: 50vw; left: 28vw;}
+	.wsname {width: 50vw; left: 35vw;}
 	.wnotes {width: 44vw; left: 35vw;display: none;}
 	.wtype {width: 20vw; left: 80vw; text-align: center;}
 	#serverBody{font-size: .9em;}
 	/* Server end */
 
+	/* Hotfix */
+	.hotfixMain {font-size: .75em;}
+	/* Hotfix end */
+	/* Links */
+	#linksBody {font-size: .75em;}
+	.lname {width: 28%; max-width: 28%; padding-left: 2%;}
+	.lnotes {left: 30%; width: 50%; max-width: 50%;}
+	.linfo {left: 90%; width: 10%; text-align: left;}
+	/* Links end */
+}
+
+@media screen and (max-width: 568px){
+	/* Navigation & Home page */
+	.nav {height: 40px; line-height: 40px; width:100%; font-size: .8em;}
+	.nav ul {padding-left: 2%;}
+	.nav li {width: 3.5em; line-height: 1.5em;border-right: 1px solid black;}
+	.nav li:last-child {border-right: none}
+	.nav a {}
+	.nav a:hover {}
+	.nav a.active {}
+	.domoFont {font-size: 1em; letter-spacing: -2;}
+	#headerBase {position: absolute; top: 0; height: 40px;}
+	#header1 {}
+	#header2 {}
+	.header1 {height: 40px; line-height: 40px; z-index: 100;}
+	.header1:hover {}
+	.header2 {top: 3px; height: 40px; line-height: 40px;}
+	.header3Version {
+		position: absolute;
+		font-size: .3em;
+		width: 100%;
+		text-align: right;
+	}
+
+	.tHover {}
+	.tHover:hover .header3Version {}
+
+	/* General Items */
+	.titleFade {font-size: 1em;}
+	content {top: 40px;	height: calc(100% - 42px);}
+	.rCount {display: none;}
+	.message {font-size: .7em;line-height: 2em;}
+
+	/* Hotfix schedule info */
+	.hscLocation2 {font-size: .8em; width: 65% !important;}
+	.displayNextTitle2 {height: 1em; line-height: 1em;}
+	.displayNextSquad2 {height: 1.5em !important; line-height: 1.5em !important;}
+	.hscList2 {top: 3em !important; height: calc(100% - 3em) !important;}
+	/* Navigation & Home page end */
+
+	/* Team */
+	.teamsList {} #teamLayout {font-size: .75em;}
+	/* Team end */
+
+	/* Server */
+	.wname {width: 34vw;}
+	.wsname {width: 50vw; left: 35vw;}
+	.wnotes {width: 44vw; left: 35vw;display: none;}
+	.wtype {width: 20vw; left: 80vw; text-align: center;}
+	#serverBody{font-size: .8em;}
+	/* Server end */
+
 	/* hotfix */
-	.hotfixMain {font-size: .8em;}
-	.hfqaList{width: 100%;}
-	.hfareaList{width: 0;}
+	.hotfixMain {font-size: .7em;}
+	.hfAreaList {display: none;}
+	.hfqaList {width: 100%;}
 	/* Hotfix end */
 
+	#linksBody {font-size: .8em;}
+}
+
+@media screen and (max-width: 568px) and (orientation: portrait){
+	/* Navigation & Home page */
+	.nav {height: 40px; line-height: 40px; width:100%; font-size: .8em;}
+	.nav ul {padding-left: 2%;}
+	.nav li {width: 3.5em; line-height: 1.5em;border-right: 1px solid black;}
+	.nav li:last-child {border-right: none}
+	.nav a {}
+	.nav a:hover {}
+	.nav a.active {}
+	.domoFont {font-size: 1em; letter-spacing: -2;}
+	#headerBase {position: absolute; top: 0; height: 40px;}
+	#header1 {}
+	#header2 {}
+	.header1 {height: 40px; line-height: 40px; z-index: 100;}
+	.header1:hover {}
+	.header2 {top: 3px; height: 40px; line-height: 40px;}
+	.header3Version {
+		position: absolute;
+		font-size: .3em;
+		width: 100%;
+		text-align: right;
+	}
+
+	.tHover {}
+	.tHover:hover .header3Version {}
+
+	/* General Items */
+	.titleFade {font-size: 1em;}
+	content {top: 40px;	height: calc(100% - 42px);}
+	.rCount {display: none;}
+	.message {font-size: .7em;line-height: 2em;}
+
+	/* Hotfix schedule info */
+	.hscLocation2 {font-size: .8em; width: 65% !important;}
+	.displayNextTitle2 {height: 1em; line-height: 1em;}
+	.displayNextSquad2 {height: 1.5em !important; line-height: 1.5em !important;}
+	.hscList2 {top: 3em !important; height: calc(100% - 3em) !important;}
+	/* Navigation & Home page end */
+
+	/* Team */
+	.teamsList {} #teamLayout {font-size: .75em;}
+	.teamsList {width: 33% !important;}
+	.qaList{width: 33% !important;}
+	.directorList{width: 33% !important;}
+	.featuresList{display: none;}
+	.ffeaturesList{display: none;}
+	/* Team end */
+
+	/* Server */
+	.wname {width: 34vw;}
+	.wsname {width: 50vw; left: 35vw;}
+	.wnotes {width: 44vw; left: 35vw;display: none;}
+	.wtype {width: 20vw; left: 80vw; text-align: center;}
+	#serverBody{font-size: .8em;}
+	/* Server end */
+
+	/* hotfix */
+	.hotfixMain {font-size: .7em;}
+	.hfAreaList {display: none;}
+	.hfqaList {width: 100%;}
+	/* Hotfix end */
+
+	/* Links */
 	#linksBody {font-size: .8em;}
 
 	.lname {
@@ -149,7 +249,58 @@
 		right: 0;
 		text-align: left;
 	}
-
-
+	/* Links end */
 }
 
+/* Portrait and Landscape */
+@media screen and (min-width: 320px) and (max-width: 480px){
+
+	/* Hotfix schedule info */
+	.hscLocation2 {font-size: .8em; width: 65% !important;}
+	.displayNextTitle2 {height: 1em; line-height: 1em;}
+	.displayNextSquad2 {height: 1.5em !important; line-height: 1.5em !important;}
+	.hscList2 {top: 3em !important; height: calc(100% - 3em) !important;}
+
+	/*	widths	Team Page */
+		.teamsList {width: 33% !important;}
+		.qaList{width: 33% !important;}
+		.directorList{width: 33% !important;}
+		.featuresList{display: none;}
+		.ffeaturesList{display: none;}
+
+			/* Server */
+	.wname {width: 34vw;}
+	.wsname {width: 50vw; left: 28vw;}
+	.wnotes {width: 44vw; left: 35vw;display: none;}
+	.wtype {width: 20vw; left: 80vw; text-align: center;}
+	#serverBody{font-size: .9em;}
+	/* Server end */
+
+	/* hotfix */
+	.hotfixMain {font-size: .8em;}
+	.hfqaList{width: 100%;}
+	.hfareaList{width: 0;}
+	/* Hotfix end */
+	/* Links */
+	#linksBody {font-size: .8em;}
+
+	.lname {
+		width: 50%;
+		max-width: 50%;
+		padding-left: 5%;
+	}
+
+	.lnotes {
+		left: 30vw;
+		width: 0;
+		max-width: 0;
+		display: none;
+	}
+
+	.linfo {
+		left: 0;
+		right: 0;
+		text-align: left;
+	}
+	/* Links end */
+}
