--- a/other/qualityAssuranceV2/css/home.css
+++ b/other/qualityAssuranceV2/css/home.css
@@ -31,7 +31,7 @@
 	z-index: 10;
 	font-style: bolder;
 	right: 0px;
-	width: 30%;
+	//width: 50%;
 	border-left: 1px black solid;
 	height: calc(100% - 23px);
 	text-align: center;
@@ -40,16 +40,15 @@
 .displayNextTitle2 {
 	height: 1.4em;
 	line-height: 1.4em;
-	text-align: left;
-	padding-left: 10px;
+	/*text-align: left;*/
+	/*padding-left: 10px;*/
 	background-color: #707F8A;
 	color: #fff;
 	border-bottom: 1px black solid;
-	//border-left: 1px black solid;
 }
 
 .displayNextSquad2 {
-	width: 100%;
+/*	width: 100%;*/
 	height: 2em;
 	line-height: 2em;
 	bottom: 23px;
@@ -58,6 +57,8 @@
 	border-bottom: 1px black solid;
 	background-color: rgba(153,204,238,0.65);
 }
+
+::-webkit-scrollbar {display: none;}
 
 .hscList2 {
 	position: absolute;
@@ -68,34 +69,45 @@
 	overflow-y: auto;
 }
 
-::-webkit-scrollbar {display: none;}
-
 .displayNextSquad3 {
 	font-size: 1em;
 	line-height: 1.em;
 }
 
 .lSquad2 {
-	left: 0;
-	width: 28%;
+	//left: 0;
+	width: 16%;
+	width: 90px;
+	float: left;
+	border-right: 1px black solid;
+}
+.lLead2 {
+	//left: calc(16% + 1px);
+	width: 30%;
+	width: 150px;
 	float: left;
 	border-right: 1px black solid;
 }
 
 .lDay2 {
-	left: calc(28% + 1px);
-	width: 32%;
+	//left: calc(46% + 2px);
+	width: 20%;
+	width: 100px;
 	float: left;
 	border-right: 1px black solid;
 }
 
 .lDate2 {
-	left: 60%;
-	width: calc(40% - 2px);
+	//left: 10%;
+	width: calc(20% - 3px);
+	width: 100px;
 	float: left;
 }
 
 
 .leftFade {background-color: rgba(224,223,226,0.65);}
 
+.volunteer{
+	color: fb8d34;
+}
 
